workloads/home-assistant/home-assistant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      priorityClassName: home-assistant-critical
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - closet
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          imagePullPolicy: Always
          securityContext:
            privileged: true
          ports:
            - containerPort: 8123
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: ttyusb0
              mountPath: /dev/ttyUSB0
          resources:
            requests:
              cpu: 1500m
              memory: 3Gi
            limits:
              cpu: 1500m
              memory: 3Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: home-assistant-config-lh
        - name: ttyusb0
          hostPath:
            path: /dev/ttyUSB0
            type: CharDevice

      # Recorder configuration is set in /config/configuration.yaml on the PVC:
      #   recorder:
      #     purge_keep_days: 7
      #     auto_purge: true
