workloads/home-assistant/matter-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matter-server
  labels:
    app: matter-server
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: matter-server
  ports:
    - port: 5580
      targetPort: 5580
      protocol: TCP
      name: ws
